--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "stripe": "^16.0.0"
   },
   "scripts": {
-    "build": "echo \"HIIT56 static build (no-op)\"",
-    "dev:site": "node tools/static_server.cjs",
+    "build": "echo \"NDYRA static build (no-op)\"",
+    "dev:site": "npm run start:qa",
     "qa:smoke": "python tools/qa_smoke.py",
     "qa:e2e": "playwright test",
     "qa:lighthouse": "lhci autorun",
     "qa:vimeo:allowlist": "node tools/vimeo_allowlist_check.mjs --domain localhost --domain 127.0.0.1",
-    "qa:all": "npm run qa:smoke && npm run qa:e2e && npm run qa:lighthouse"
+    "qa:all": "npm run qa:smoke && npm run qa:e2e && npm run qa:lighthouse",
+    "start:qa": "node tools/static_server.cjs --root site --port 4173",
+    "dev:serve": "serve -s site -l 4173"
   },
   "devDependencies": {
     "@lhci/cli": "^0.15.1",
